# maridatadownloader

./: CITATION.cff  README.md  pyproject.toml  setup.py
maridatadownloader/: __init__.py  cds.py  copernicus_marine_toolbox.py  opendap.py  trajectories.py  utils.py  xarray.py
notebooks/: demo.ipynb
